Updated detailed activity

--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -2,17 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="horizontal"
 android:layout_width="fill_parent"
-android:layout_height="fill_parent">
+android:layout_height="fill_parent"
+    android:background="@android:color/darker_gray">
 <TextView android:id="@+id/jevent"
-    android:textSize="14sp"
+    android:textSize="22sp"
     android:textStyle="bold"
-    android:textColor="#FFFF00"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5sp" />
 <TextView android:id="@+id/comment"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:textSize="22sp"
+    android:layout_marginLeft="5sp" />
 <TextView android:id="@+id/browser"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:textSize="22sp"
+    android:layout_marginLeft="5sp" />
 </LinearLayout>
